# SpaceCadets

./: README.MD
SCChallenge1/: CMakeLists.txt  README.md
SCChallenge1.1/: CMakeLists.txt  README.md
SCChallenge1.1/src/: DllMain.cpp  IAT.cpp  IAT.hpp  SpaceCadets.cpp  SpaceCadets.hpp
SCChallenge1.1/src/injector/: main.cpp
SCChallenge1/src/: HtmlParser.cpp  HtmlParser.hpp  main.cpp
SCChallenge2/: .gitignore  Makefile  README.md
SCChallenge2.1/: CMakeLists.txt  README.md
SCChallenge2.1/src/: main.cpp
SCChallenge2/src/: barebones.c  barebones.h  boot.asm  kernel.c  linker.ld  mem.c  mem.h  terminal.c  terminal.h  utils.c  utils.h
